--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
           cd CNAME_rx
           echo 'wiki.calinix.tech' > CNAME
           cat CNAME
-      - uses: dmnemec/copy_file_to_another_repo_action@main
+      - name: Pushes test file
+        uses: dmnemec/copy_file_to_another_repo_action@main
         env:
          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
