--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           echo 'wiki.calinix.tech' > CNAME
           cat CNAME
       - name: Pushes test file
-        uses: dmnemec/copy_file_to_another_repo_action@main
+      - uses: dmnemec/copy_file_to_another_repo_action@main
         env:
          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
