--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci 
 on:
   push:
     branches: 
@@ -9,14 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Depoly Wiki
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
+      - run: pip install mkdocs-material # 
       - run: mkdocs gh-deploy --force
       - uses: actions/checkout@v2
-      - name: Set Custom Domain
       - run: |
           mkdir CNAME_rx
           cd CNAME_rx
